# vuln-hunter

./: .env.example  .gitignore  QUICK_REFERENCE.md  README.md  TREE_SITTER_IMPLEMENTATION.md  USAGE_COMMANDS.md  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/jobs/: models.py  serializers.py  urls.py  views.py
backend/jobs/migrations/: 0001_initial.py
backend/reports/: models.py  urls.py  views.py
backend/reports/migrations/: 0001_initial.py
backend/vuln_hunter/: asgi.py  settings.py  urls.py  wsgi.py
backend/vulnerabilities/: models.py  urls.py  views.py
backend/vulnerabilities/migrations/: 0001_initial.py
docs/: architecture.md  (+1 more)
shared/: pyproject.toml
shared/src/vuln_hunter_shared/: __init__.py
shared/vuln_hunter_shared/: __init__.py  config.py  models.py
workflows/: Dockerfile  INTEGRATION_DIAGRAM.md  TREE_SITTER_INTEGRATION_GUIDE.md  debug_cve.py  main.py  prefect.yaml  pyproject.toml  report.md  run_analysis.py  test_cve_detection.py  test_flow_structure.py  test_hyphens.py  test_prefect.py
workflows/agent/: __init__.py  config.py  vulnerability_agent.py
workflows/code_search/: ARCHITECTURE.md  QUICKSTART.md  README.md  __init__.py  examples.py  integration_example.py  parser.py  patterns.py  query_builder.py  searcher.py  setup_languages.py  test_code_search.py
workflows/flows/: cve_analysis_flow.py  enhanced_cve_analysis_flow.py
workflows/tasks/: __init__.py  agent_tasks.py  dependency_scanner.py  enhanced_indexer_tasks.py  indexer_tasks.py  repo_tasks.py  test_indexer_integration.py  vuln_db_tasks.py
(+18 files in other folders)
